Fix a bug. Elaborate on the answer to evaluation of the recommendation engine.

--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -1061,7 +1061,7 @@
     "    # Initialize recommendations.\n",
     "    recs = set()\n",
     "    # Loop over the articles viewed by similar users.\n",
-    "    for user in users_similar[:2]:\n",
+    "    for user in users_similar:\n",
     "        # Get the articles that user has viewed already.\n",
     "        article_ids, _ = get_user_articles(user)\n",
     "        new_recs = set(article_ids)\n",
@@ -2089,7 +2089,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your response here.** As common users between test & train set are few, there are limited number of users that we could make predictions for, ergo SDV falls short. "
+    "**Your response here.**\n",
+    "\n",
+    "- Although the accuracy is high, we have to consider that the matrix is mostly consisted of zeros, i.e., no interaction than 1.    \n",
+    "\n",
+    "- With the increase in the number of latent variables, the testset accuracy decreases. The reason is that %96.6 of the users are new and we are not able to make predictions for them -- so-called `cold start problem`. And by no means is 20 users enough so that our ML-based approach could have generalization power. This could be the reason behind the decrease in testset accuracy with the increase in the number of latent variables (when model gets more complicated, it also detects noise as singnal.)\n",
+    "\n",
+    "- As a result, the train-test approach is not viable to evaulate the predictive power of our recommendation engine. Methods such as A/B testing could come handy. "
    ]
   },
   {
